               from ‘RLum.Results’ objects.

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'
               (requires the 'plotly' package),

             • Notes about consequences of ‘log.z = TRUE’ updated

             • Boxplot option added

             • Summary keywords homogenised.

         • ‘plot_DRTResults()’

             • If no given dose is provided the horizontal 'ab-lines'
               (1.0 and +/- 0.1) are no longer plotted,

             • default value for the argument ‘given.dose’ is now
               ‘NULL’.

         • ‘plot_GrowthCurve()’

             • If the input data contain a least one infinite value the
               function will not crash any longer, but return ‘NULL’
               (#263, Norbert Mercier),

             • check for insufficient values in the data set and return
               ‘NULL’ (before the function crashed),

             • data frame also exports now error of the D0-values based
               on the MC runs for the De error,

             • the option ‘fit.includingRepeatedRegPoints = FALSE’ was
               not respected properly under all circumstances;
               corrected,

             • under rather rare circumstances the function became
               trapped in an endless mode as the function ‘nls’ is
               trapped in such mode if only two points are provided.
               The minimum of required data points for ‘EXP’ was set to
               three,

             • homogenise terminal output.

         • ‘plot_Histogram()’

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'
               (requires the 'plotly' package).

         • ‘plot_KDE()’

             • Boxplot option added,

             • Depreciated arguments removed (centrality, dispersion,
               weights, polygon.col),
